--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   carousel_slider: ^4.2.1
   connectivity_plus: ^5.0.1
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
