--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.2.1
   connectivity_plus: ^5.0.1
   connectivity: ^3.0.6
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
